modal close event fix - watcher never fires if parent gets removed: add onUnmounted lifecycle hook - since unable to add h3 element as direct child of article, switch to div - fix too much bold on items (sketch doc seems wrong)

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -115,7 +115,7 @@ button {
 }
 
 .button--blue {
-  font-weight: 700;
+  font-weight: 500;
   color: var(--theme-moderate-blue);
   background-color: none;
   border-radius: 8px;
@@ -131,7 +131,7 @@ button {
 }
 
 .button--red {
-  font-weight: 700;
+  font-weight: 500;
   color: var(--theme-pale-red);
   border-radius: 8px;
 }
@@ -146,7 +146,7 @@ button {
 }
 
 .button--gray {
-  font-weight: 700;
+  font-weight: 500;
   color: var(--theme-grayish-blue);
   display: inline-flex;
   align-items: center;
@@ -160,7 +160,7 @@ button {
 }
 
 .button--light-gray {
-  font-weight: 700;
+  font-weight: 500;
   color: var(--color-text);
   display: inline-flex;
   align-items: center;
@@ -177,7 +177,7 @@ button {
   text-transform: uppercase;
   padding: 12px 30px;
   border-radius: 8px;
-  font-weight: bold;
+  font-weight: 500;
   font-size: 16px;
 }
 
